--- a/pages/Calcula-costos.html
+++ b/pages/Calcula-costos.html
@@ -10,7 +10,7 @@
     <title>Consultorio web muelitas</title>
 </head>
 
-<body>
+<body onload="activar()">
 
     <!--NAVBAR-->
     <nav class="navbar bg-primary navbar-expand-lg " data-bs-theme="dark">
@@ -52,6 +52,13 @@
         </div>
     </nav>
 
+<div class="text-center">
+<a href="./Regalo-muelitas.html"><img src="../Img/premiomuelitas.png" class="img-fluid text-center mt-5" alt=""></a>
+<h4 class="mt-3">Carga tus datos y gana! Click en la imagen</h4>
+</div>
+<div class="container-fluid bg-primary justify-content-center text-center mt-4 mb-2 ">
+    <button class="btn btn-primary " type="submit" id="miBoton" onclick="pedirTurno()"> <b>Pedir turno</b> </button>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/mai.js"></script>
 </body>
