Proyecto final js - Nicolas La Cotera

--- a/pages/Calcula-costos.html
+++ b/pages/Calcula-costos.html
@@ -72,8 +72,8 @@
             <button class="btn btn-primary " type="submit" id="btnPedirTurno"> <b>Pedir turno</b> </button>
         </div>
     </div>
-    <div class="container">
-    <div class="row justify-content-between  text-center text-secondary mt-5 ">
+    <div class="container ">
+    <div class="row justify-content-center justify-content-lg-between text-center text-secondary mt-5 ">
         <hr>
         <h4 class="mb-5">Medios de pago</h4>
 
