--- a/pages/Turnos.html
+++ b/pages/Turnos.html
@@ -41,34 +41,35 @@
             </div>
         </div>
     </nav>
-    
+
     <div class=" container justify-content-center ">
-    <form class="row g-3 p-3 mt-5 bg-light form-turno rounded shadow border-1">
-        <h2 class="text-center mt-2 mb-4 text-primary-emphasis">Pedi tu turno</h2>
-        <div class="col-md-6">
-            <label for="inputEmail4" class="form-label">Nombre</label>
-            <input type="text" class="form-control" id="inpuNombre">
-        </div>
-        <div class="col-md-6">
-            <label for="inputPassword4" class="form-label">apellido</label>
-            <input type="text" class="form-control" id="inputApellido">
-        </div>
-        <div class="col-12">
-            <label for="inputAddress" class="form-label">Obra social / Particular</label>
-            <input type="text" class="form-control" id="inpuObraSocial" placeholder="">
-        </div>
-        <div class="col-12">
-            <label for="inputAddress2" class="form-label" id="InputTratamiento">Tratamiento</label>
-            <select id="inputState" class="form-select">
-                <option selected>-</option>
-                <option>Consulta</option>
-                <option>Estetica dental</option>
-                <option>Extraccion</option>
-                <option>Ortodoncia</option>
-            </select>        </div>
+        <form class="row g-3 p-3 mt-5 bg-light form-turno rounded shadow border-1">
+            <h2 class="text-center mt-2 mb-4 text-primary-emphasis">Pedi tu turno</h2>
+            <div class="col-md-6">
+                <label for="inputEmail4" class="form-label">Nombre</label>
+                <input type="text" class="form-control" id="inpuNombre">
+            </div>
+            <div class="col-md-6">
+                <label for="inputPassword4" class="form-label">apellido</label>
+                <input type="text" class="form-control" id="inputApellido">
+            </div>
+            <div class="col-12">
+                <label for="inputAddress" class="form-label">Obra social / Particular</label>
+                <input type="text" class="form-control" id="inpuObraSocial" placeholder="">
+            </div>
+            <div class="col-12">
+                <label for="inputAddress2" class="form-label" id="inputTratamientos">Tratamiento</label>
+                <select id="inputTratamiento" class="form-select">
+                    <option selected>-</option>
+                    <option>Consulta</option>
+                    <option>Estetica dental</option>
+                    <option>Extraccion</option>
+                    <option>Ortodoncia</option>
+                </select>
+            </div>
             <div class="col-md-4">
                 <label for="inputZip" class="form-label">Email</label>
-                <input type="email" class="form-control" id="inputZip">
+                <input type="email" class="form-control" id="inputEmail">
             </div>
             <div class="col-md-4">
                 <label for="inputState" class="form-label">Fecha</label>
@@ -82,97 +83,90 @@
                     <option value="fecha8">Jueves 8 de Junio</option>
                 </select>
             </div>
-        <div class="col-md-4 horarios-turnos" id="horarios-container1">
-            <label for="inputState" class="form-label">Hora</label>
-            <select id="inputHora1" class="form-select">
-                <option selected>-</option>
-                <option>11:00 AM</option>
-                <option>13:30 PM</option>
-                <option>14:00 PM</option>
-                <option>16:00 PM</option>
-            </select>
-        </div>
-
-        <div class="col-md-4 horarios-turnos" id="horarios-container2">
-            <label for="inputState" class="form-label">Hora</label>
-            <select id="inputHora2" class="form-select">
-                <option selected>-</option>
-                <option>9:00 AM</option>
-                <option>10:30 AM</option>
-                <option>12:00 PM</option>
-                <option>15:00 PM</option>
-                <option>15:30 PM</option>
-            </select>
-        </div>
-        <div class="col-md-4 horarios-turnos" id="horarios-container5">
-            <label for="inputState" class="form-label">Hora</label>
-            <select id="inputHora5" class="form-select">
-                <option selected>-</option>
-                <option>9:30 AM</option>
-                <option>10:00 AM</option>
-                <option>10:30 AM</option>
-                <option>16:00 PM</option>
-                <option>16:30 PM</option>
-                <option>17:00 PM</option>
-                <option>18:00 PM</option>
-            </select>
-        </div>
-        <div class="col-md-4 horarios-turnos" id="horarios-container6">
-            <label for="inputState" class="form-label">Hora</label>
-            <select id="inputHora6" class="form-select">
-                <option selected>-</option>
-                <option>9:30 AM</option>
-                <option>10:00 AM</option>
-                <option>11:30 AM</option>
-                <option>13:00 PM</option>
-                <option>16:30 PM</option>
-                <option>17:00 PM</option>
-                <option>18:30 PM</option>
-            </select>
-        </div>
-        <div class="col-md-4 horarios-turnos" id="horarios-container7">
-            <label for="inputState" class="form-label">Hora</label>
-            <select id="inputHora7" class="form-select">
-                <option selected>-</option>
-                <option>9:30 AM</option>
-                <option>10:00 AM</option>
-                <option>11:30 AM</option>
-                <option>13:00 PM</option>
-                <option>16:30 PM</option>
-                <option>17:00 PM</option>
-                <option>18:30 PM</option>
-            </select>
-        </div>
-        <div class="col-md-4 horarios-turnos" id="horarios-container8">
-            <label for="inputState" class="form-label">Hora</label>
-            <select id="inputHora8" class="form-select">
-                <option selected>-</option>
-                <option>9:00 AM</option>
-                <option>9:30 AM</option>
-                <option>10:00 AM</option>
-                <option>11:30 AM</option>
-                <option>12:00 PM</option>
-                <option>14:00 PM</option>
-                <option>15:30 PM</option>
-                <option>18:00 PM</option>
-                <option>18:30 PM</option>
-            </select>
-        </div>
-        <div class="col-12">
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" id="gridCheck">
-                <label class="form-check-label" for="gridCheck">
-                    Enviar turno al mail
-                </label>
+            <div class="col-md-4 horarios-turnos" id="horarios-container1">
+                <label for="inputState" class="form-label">Hora</label>
+                <select id="inputHora1" class="form-select">
+                    <option selected>-</option>
+                    <option>11:00 AM</option>
+                    <option>13:30 PM</option>
+                    <option>14:00 PM</option>
+                    <option>16:00 PM</option>
+                </select>
             </div>
-        </div>
-        <div class="col-12 text-center">
-            <button type="submit" class="btn btn-primary te">Confirmar</button>
-        </div>
-    </form>
-</div>
+
+            <div class="col-md-4 horarios-turnos" id="horarios-container2">
+                <label for="inputState" class="form-label">Hora</label>
+                <select id="inputHora2" class="form-select">
+                    <option selected>-</option>
+                    <option>9:00 AM</option>
+                    <option>10:30 AM</option>
+                    <option>12:00 PM</option>
+                    <option>15:00 PM</option>
+                    <option>15:30 PM</option>
+                </select>
+            </div>
+            <div class="col-md-4 horarios-turnos" id="horarios-container5">
+                <label for="inputState" class="form-label">Hora</label>
+                <select id="inputHora5" class="form-select">
+                    <option selected>-</option>
+                    <option>9:30 AM</option>
+                    <option>10:00 AM</option>
+                    <option>10:30 AM</option>
+                    <option>16:00 PM</option>
+                    <option>16:30 PM</option>
+                    <option>17:00 PM</option>
+                    <option>18:00 PM</option>
+                </select>
+            </div>
+            <div class="col-md-4 horarios-turnos" id="horarios-container6">
+                <label for="inputState" class="form-label">Hora</label>
+                <select id="inputHora6" class="form-select">
+                    <option selected>-</option>
+                    <option>9:30 AM</option>
+                    <option>10:00 AM</option>
+                    <option>11:30 AM</option>
+                    <option>13:00 PM</option>
+                    <option>16:30 PM</option>
+                    <option>17:00 PM</option>
+                    <option>18:30 PM</option>
+                </select>
+            </div>
+            <div class="col-md-4 horarios-turnos" id="horarios-container7">
+                <label for="inputState" class="form-label">Hora</label>
+                <select id="inputHora7" class="form-select">
+                    <option selected>-</option>
+                    <option>9:30 AM</option>
+                    <option>10:00 AM</option>
+                    <option>11:30 AM</option>
+                    <option>13:00 PM</option>
+                    <option>16:30 PM</option>
+                    <option>17:00 PM</option>
+                    <option>18:30 PM</option>
+                </select>
+            </div>
+            <div class="col-md-4 horarios-turnos" id="horarios-container8">
+                <label for="inputState" class="form-label">Hora</label>
+                <select id="inputHora8" class="form-select">
+                    <option selected>-</option>
+                    <option>9:00 AM</option>
+                    <option>9:30 AM</option>
+                    <option>10:00 AM</option>
+                    <option>11:30 AM</option>
+                    <option>12:00 PM</option>
+                    <option>14:00 PM</option>
+                    <option>15:30 PM</option>
+                    <option>18:00 PM</option>
+                    <option>18:30 PM</option>
+                </select>
+            </div>
+            <div class="col-12 text-center">
+                <button id="btnConfirmar" class="btn btn-primary te">Confirmar</button>
+            </div>
+        </form>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/turnos.js"></script> 
+    <script src="../js/turnos.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
